--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Latest AI News & Tools Insights</title>
+<meta name="description" content="Latest AI news updates, trending AI tools, model releases and artificial intelligence insights.">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+
+<header class="header">
+<div class="logo">AI News</div>
 <nav>
 <a href="index.html">Home</a>
 <a href="about.html">About</a>
@@ -8,36 +20,26 @@
 </header>
 
 
-<main class="hero">
-<h1>Latest AI News Updates and AI Tools Insights</h1>
-<p>
-Stay updated with the latest developments in artificial intelligence.
-We cover trending AI news, newly launched AI tools, model updates,
-and practical insights that help you understand how AI is shaping the future.
-</p>
-</main>
+<section class="hero">
+<h1>Latest AI News Updates & AI Tools Insights</h1>
+<p>Stay ahead with fast, reliable updates on artificial intelligence, trending AI tools, new models, and major industry developments.</p>
+</section>
 
 
 <section class="container">
-<h2>What We Cover</h2>
-<ul class="features">
-<li>Breaking AI news and updates</li>
-<li>New AI tools and product launches</li>
-<li>AI model releases and improvements</li>
-<li>Practical AI tips and insights</li>
-</ul>
+<h2 style="text-align:center">What We Cover</h2>
+<div class="features">
+<div class="feature"><span>🧠</span><h3>AI News</h3><p>Breaking and trending AI industry updates.</p></div>
+<div class="feature"><span>⚙️</span><h3>AI Tools</h3><p>New and powerful AI tools for creators and businesses.</p></div>
+<div class="feature"><span>📊</span><h3>Insights</h3><p>Simple explanations of complex AI developments.</p></div>
+</div>
 </section>
 
 
 <section class="cta">
-<h2>Want Deeper AI Insights?</h2>
-<p>
-For detailed insights on AI tools, tutorials, and expert tips,
-explore our main resource.
-</p>
-<a class="cta-button" href="https://aiseotoolshub.com" target="_blank">
-Check This Source
-</a>
+<h2>For Detailed Insights on AI Tools and Tips</h2>
+<p>Explore in-depth guides, reviews and practical AI strategies.</p>
+<a href="https://aiseotoolshub.com" target="_blank">Visit AI SEO Tools Hub</a>
 </section>
 
 
@@ -48,7 +50,5 @@ Check This Source
 </footer>
 
 
-<script src="script.js"></script>
 </body>
 </html>
-
