--- a/about.html
+++ b/about.html
@@ -19,17 +19,31 @@
 
 
 <main class="container">
-<h1>About Us</h1>
+<h1>About AI News</h1>
+
 <p>
-AI News is a simple and fast platform focused on sharing the latest updates
-in artificial intelligence. We cover AI news, trending tools, new model
-releases, and practical insights that help readers understand what’s
-happening in the AI space.
+AI News is a dedicated platform focused on delivering the latest updates, tools,
+and insights from the world of artificial intelligence. Our goal is to make AI
+news simple, clear, and useful for everyone — from beginners to professionals.
 </p>
+
 <p>
-Our goal is clarity and speed — delivering useful information without
-unnecessary noise.
+We cover trending AI tools, major model releases, industry updates, and important
+developments shaping the future of technology. Instead of complex technical jargon,
+we explain things in a practical and easy-to-understand way.
 </p>
+
+<p>
+AI is evolving fast, and staying updated is no longer optional. Through AI News,
+we aim to help creators, developers, marketers, and business owners stay ahead
+with accurate and timely information.
+</p>
+
+<p>
+For in-depth guides, tool reviews, and actionable AI strategies, we also connect
+readers to our main resource platform.
+</p>
+
 </main>
 
 
