--- a/index.html
+++ b/index.html
@@ -35,6 +35,24 @@
 </div>
 </section>
 
+  <section class="container">
+  <h2>Latest AI News</h2>
+
+  <div class="features">
+    <div class="feature">
+      <h3>
+        <a href="chatgpt-images-launch.html">
+OpenAI Introduces ChatGPT Images — Faster Generation & Smarter Edits
+</a>
+      </h3>
+      <p>
+        OpenAI has launched ChatGPT Images, a new image generation model that delivers faster output, precise editing, and better detail preservation for creators and developers.
+      </p>
+    </div>
+  </div>
+</section>
+
+
 
 <section class="cta">
 <h2>For Detailed Insights on AI Tools and Tips</h2>
