--- a/chatgpt-images-launch.html
+++ b/chatgpt-images-launch.html
@@ -184,13 +184,21 @@
 
     <div class="read-more">
       <p>
-        <strong>Read more AI News –</strong>
-        <a href="https://aiseotoolshub.com/news" target="_blank">Click here</a>
+        <strong>News source –</strong>
+        <a href="https://aiseotoolshub.com/news" target="_blank">Aiseotoolshub</a>
       </p>
     </div>
 
   </div>
 </section>
+
+  <div class="read-more">
+  <p>
+    <strong>Read more AI News –</strong>
+    <a href="index.html">Visit Homepage</a>
+  </p>
+</div>
+
 
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
