--- a/index.html
+++ b/index.html
@@ -50,6 +50,25 @@ OpenAI Introduces ChatGPT Images — Faster Generation & Smarter Edits
       </p>
     </div>
   </div>
+
+    <div class="news-card">
+  <h3>
+    <a href="gemini-3-flash-launch.html">
+      Google Launches Gemini 3 Flash — Faster, Cheaper, and Smarter Than Gemini 2.5 Pro
+    </a>
+  </h3>
+
+  <p class="news-meta">December 18, 2025</p>
+
+  <p class="news-excerpt">
+    Google introduces Gemini 3 Flash, a new AI model delivering frontier-level intelligence with 3× faster speed, lower cost, and a wide rollout across Search, Gemini app, and developer tools.
+  </p>
+
+  <a class="read-link" href="gemini-3-flash-launch.html">
+    Read full story →
+  </a>
+</div>
+
 </section>
 
 
