--- a/index.html
+++ b/index.html
@@ -38,18 +38,23 @@
   <section class="container">
   <h2>Latest AI News</h2>
 
-  <div class="features">
-    <div class="feature">
-      <h3>
-        <a href="chatgpt-images-launch.html">
-OpenAI Introduces ChatGPT Images — Faster Generation & Smarter Edits
-</a>
-      </h3>
-      <p>
-        OpenAI has launched ChatGPT Images, a new image generation model that delivers faster output, precise editing, and better detail preservation for creators and developers.
-      </p>
-    </div>
-  </div>
+   <div class="news-card">
+  <h3>
+    <a href="chatgpt-images-launch.html">
+      OpenAI Introduces ChatGPT Images Faster Generation, Smarter Edits
+    </a>
+  </h3>
+
+  <p class="news-meta">December 18, 2025</p>
+
+  <p class="news-excerpt">
+    OpenAI has officially introduced ChatGPT Images, a new image generation capability powered by its flagship image model.
+  </p>
+
+  <a class="read-link" href="chatgpt-images-launch.html">
+    Read full story →
+  </a>
+</div>
 
     <div class="news-card">
   <h3>
